@@ -45,6 +45,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4163: textwrap module: allow word splitting on a hyphen preceded by
+  a non-ASCII letter.
+
 - Issue #4616: TarFile.utime(): Restore directory times on Windows.
 
 - Issue #4021: tokenize.detect_encoding() now raises a SyntaxError when the
